Fix screen being cutoff on tablets

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -6,8 +6,7 @@
 html, body, #main-content
     margin: 0
     padding: 0
-    height: 100%
-    overflow: hidden
+    height: 100vh
 
 body
     color: text-color
